2010-02-26 Borut Razem <borut.razem AT siol.net>

	* sdcc/support/scripts/as2gbmap.py:
	  use pre-python 2.6 exceptin handling syntax

2010-02-25 Borut Razem <borut.razem AT siol.net>

	* configure.in, configure, Makefile.in, support/scripts/Makefile.in:
	  "compile" as2gbmap.py: copy it to bin/as2gbmap and make it executable
	* support/scripts/sdcc.nsi: include bin/as2gbmap.cmd to the package

2010-02-24 Borut Razem <borut.razem AT siol.net>

	* sdcc/support/scripts/as2gbmap.py:
	  sort symbols by value for rrgb outout,
	  handle file open errors
	* doc/sdccman.lyx: documented changed library format to ar in 2.9.0;
	  documented makebin and as2gbmap.py

2010-02-23 Borut Razem <borut.razem AT siol.net>

	* src/SDCCmain.c, src/z80/main.c, sdas/linksrc/lkdata.c,
	  sdas/linksrc/lklist.c, sdas/linksrc/lkmain.c, sdas/linksrc/lkrloc.c,
	  sdas/linksrc/aslink.h:
	  removed geneneration of no$gmb symbol file and rrgb map file
	* sdas/linksrc/Makefile.in: removed compilation of lkgb.c
	* sdcc/support/scripts/as2gbmap.py:
	  added option -j to convert from asxxxx to no$gmb symbol file format
	* sdas/linksrc/lkgb.c, sdas/linksrc/lkgg.c: deleted from svn

2010-02-21 Borut Razem <borut.razem AT siol.net>

	* support/makebin/makebin.c:
	  check if fopen() succeeded
	* support/regression/ports/gbz80/spec.mk:
	  sdlsgb now creates .ihx file and makebin converts it to .gb;
	  removed -m (Load map file) rrgb command line option, since sdlsgb
	  doesn't generate a rrgb compatible map file
	* src/SDCCmain.c: search C runtime initialization object files
	  crt0.rel in system library directories, then in user defined
	  library directories - third try
	* support/scripts/as2gbmap.py: converter from asxxxx to rrgb map
	  file format

2010-02-21 Frieder Ferlemann <Frieder.Ferlemann AT web.de>

	* src/mcs51/rt rack.c: fixed two warnings reported in #2955971
	  by Hubert Sack. (2nd warning found a bug)

2010-02-20 Philipp Klaus Krause <pkk AT spth.de>
	* device/lib/gbz80/mul.s,